--- a/src/main/resources/com/example/demo/login-view.fxml
+++ b/src/main/resources/com/example/demo/login-view.fxml
@@ -33,6 +33,7 @@
 -->
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -48,7 +49,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.example.demo.HelloController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -106,7 +108,7 @@
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                  <children>
                                     <Label layoutX="31.0" layoutY="250.0" text="user name" />
-                                    <Button layoutX="201.0" layoutY="277.0" mnemonicParsing="false" text="get started" />
+                                    <Button layoutX="201.0" layoutY="277.0" mnemonicParsing="false" onAction="#onUserNameClick" text="get started" />
                                     <Label layoutX="14.0" layoutY="30.0" text="welcon on " />
                                     <Label layoutX="93.0" layoutY="14.0" text="T.Q">
                                        <font>
@@ -114,7 +116,8 @@
                                        </font>
                                     </Label>
                                     <Label ellipsisString="" layoutX="16.0" layoutY="99.0" prefHeight="36.0" prefWidth="269.0" text="your simple multiples choice  question app &#10;for train your mind" textAlignment="CENTER" textOverrun="CLIP" wrapText="true" />
-                                    <TextField layoutX="31.0" layoutY="277.0" opacity="0.53" text="Enter your userName" />
+                                    <TextField layoutX="31.0" layoutY="277.0" opacity="0.53" text="Enter your userName" onAction="#onTextChange" />
+                                    <ComboBox accessibleText="admin" layoutX="31.0" layoutY="341.0" onAction="#onDropRole" opacity="0.69" prefWidth="150.0" promptText="choose a role" />
                                  </children>
                               </AnchorPane>
                           </items>
